add tags to wishes, link to wish-details
